syntax = "proto3";

option go_package = "protos/messages";

message DownloadFileArgs {
  string file_name = 1;
}