syntax = "proto3";

option go_package = "protos/messages";

message JoinResponse {
  string id = 1;
}