syntax = "proto3";

option go_package = "protos/messages";

message SearchArgs {
  string filename = 1;
}
